# cPractice

./: CMakeLists.txt  README.md
.runtime/: test.txt
infile/test/: p0001_0.in  p0001_3.in
outfile/test/: p0001_3.out
src/Codeforces/round1017(div.4)(2094)/: A.cpp  B.cpp
src/lanqiao/: 19714.cpp  19717.cpp  19733.cpp  20178.cpp  20240.cpp  20241.cpp  20264.cpp  20266.cpp  20267.cpp  20270.cpp  20271.cpp  20273.cpp  20274.cpp  20287.cpp  20288.cpp  20289.cpp  303.cpp
src/lanqiao/round_14GB/: A_17104.cpp
src/lanqiao/round_14sB/: A_3492.cpp
src/lanqiao/round_16sB/: B_p12338.cpp  C_p12339.cpp  D_12340.cpp  E_p12342.cpp  F_p12343.cpp  H_p12344.cpp
src/luogu/: P1028.cpp  P12130.cpp  T207707.cpp  T270713.cpp  T270714.cpp  p1002.cpp  p1003.cpp  p1036.cpp  p1055.cpp  p1059.cpp  p1062.cpp  p1063.cpp  p1093.cpp  p1113.cpp  p1115.cpp  p1164.cpp  p1182.cpp  p12131.cpp  p12132.cpp  p12133.cpp  p12134.cpp  p1216.cpp  p1226.cpp  p1303.cpp  p1314.cpp  p1434.cpp  p1496.cpp  p1601.cpp  p1678.cpp  p1706.cpp  p1719.cpp  p1824.cpp  p2036.cpp  p2084.cpp  p2367.cpp  p2440.cpp  p2678.cpp  p3397.cpp  p3799.cpp  p3853.cpp  (+4 more)
src/test/: CreatGraph.cpp  STL.cpp  class.cpp  class1.cpp  combination.cpp  fastPow.cpp  fullArray.cpp  high_precision.cpp  infile.cpp  main.cpp  next_permutation.cpp  operator.cpp  outfile.cpp  pointCount_tree.cpp  prime_num.cpp  test.cpp  test1.cpp  test2.cpp  test3.cpp  topological_sorting.cpp
